@@ -438,6 +438,13 @@ HELP_ADVNCOOK2=<EXPERTISE>The ability to cook items of higher level. Items cooke
 HELP_ADVNCOOK3=<EXPERTISE>The ability to cook items of higher level. Items cooked "Superior" are also better.
 DATA_=Improved,Enhanced,Superior
 
+RUSHCRAFT@x1=Rushed Crafting @x2,3,X6,-SKILLFLAG "+COMMON SKILL&CRAFTING",,+DEX {5+(4*@x1)},0,1,0,0,0
+HELP_=<EXPERTISE>The ability to rush lower leveled crafted items using more material and sacrificed quality.
+HELP_RUSHCRAFT1=<EXPERTISE>The ability to rush lower leveled crafted items using more material and sacrificed quality.. Items crafted "Hurried" are a little lower level, and worth a little less.
+HELP_RUSHCRAFT2=<EXPERTISE>The ability to rush lower leveled crafted items using more material and sacrificed quality.. Items crafted "Rushed" are lower level, and worth less.
+HELP_RUSHCRAFT3=<EXPERTISE>The ability to rush lower leveled crafted items using more material and sacrificed quality.. Items crafted "Crudy" are much lower level, and worth much less.
+DATA_=Hurried,Rushed,Crudy
+
 LITECRAFT@x1=Light Crafting @x2,3,X1,-SKILL +Carpentry +Armorsmithing +MasterArmorsmithing +Blacksmithing +Cobbling +Costuming +Fletching +JewelMaking +LeatherWorking +MasterCostuming +MasterLeatherWorking +MasterTailoring +Paladin_CraftHolyAvenger +ScrimShaw +Sculpting +Tailoring +Weaponsmithing +MasterWeaponsmithing +LegendaryWeaponsmithing +Weaving,-CLASS +Archon,+DEX {10+(4*@x1)},0,20,0,0,0
 HELP_=<EXPERTISE>The ability to craft items using less material without sacrificing quality.
 HELP_LITECRAFT1=<EXPERTISE>The ability to craft items using less material without sacrificing quality. Items crafted "Light" are a little lighter, and worth a little more in value.
